# epl-analysis

./: .gitignore  README.md  main.py  pyproject.toml
bruin/: pipeline.yml
bruin/assets/: ingest_kaggle.py  load_snowflake.py  run_dbt.py  spark_transform.py
data/staging/epl_matches.parquet/season_start_year=2015/: .part-00000-19544703-7b7a-471f-9d59-d52c3e2a7e9a.c000.snappy.parquet.crc  .part-00000-a94a9544-591b-42c8-be0f-d3490f93ab8f.c000.snappy.parquet.crc  .part-00000-b878afd1-4395-42aa-ba1f-7763e4af68ad.c000.snappy.parquet.crc  .part-00000-e8104d28-ce14-4623-9578-3032be270976.c000.snappy.parquet.crc  part-00000-19544703-7b7a-471f-9d59-d52c3e2a7e9a.c000.snappy.parquet  part-00000-a94a9544-591b-42c8-be0f-d3490f93ab8f.c000.snappy.parquet  part-00000-b878afd1-4395-42aa-ba1f-7763e4af68ad.c000.snappy.parquet  part-00000-e8104d28-ce14-4623-9578-3032be270976.c000.snappy.parquet
data/staging/epl_matches.parquet/season_start_year=2016/: .part-00000-19544703-7b7a-471f-9d59-d52c3e2a7e9a.c000.snappy.parquet.crc  .part-00000-a94a9544-591b-42c8-be0f-d3490f93ab8f.c000.snappy.parquet.crc  .part-00000-b878afd1-4395-42aa-ba1f-7763e4af68ad.c000.snappy.parquet.crc  .part-00000-e8104d28-ce14-4623-9578-3032be270976.c000.snappy.parquet.crc  part-00000-19544703-7b7a-471f-9d59-d52c3e2a7e9a.c000.snappy.parquet  (+3 more)
epl_dbt/: dbt_project.yml  profiles.yml.example
epl_dbt/models/marts/: fct_league_table.sql  fct_match_kpi.sql  schema.yml
epl_dbt/models/staging/: schema.yml  sources.yml  stg_matches.sql
spark/: transform.py
(+64 files in other folders)
